--- a/mywebserver.yml
+++ b/mywebserver.yml
@@ -1,13 +1,16 @@
 ---
 - hosts: all
   become: true
+  gather_facts: yes
   tasks:
   - name: I want to install apache2 webserver
     apt:
       name: apache2
       state: present
+      when: ansible_os_family=="Debian"
 
   - name: I want to start apache2 webserver(sudo service apache2)
     service:
         name: apache2
-        state: started
+        state: started 
+
