--- a/mywebserver.yml
+++ b/mywebserver.yml
@@ -12,5 +12,6 @@
   - name: I want to start apache2 webserver(sudo service apache2)
     service:
         name: apache2
-        state: started 
+        state: started
+    when: ansible_os_family=="Debian"
 
