--- a/mywebserver.yml
+++ b/mywebserver.yml
@@ -5,25 +5,25 @@
   tasks:
   - name: I want to install apache2 webserver
     apt:
-      name: apache2
+      name: mywebpackageonubuntu
       state: present
     when: ansible_os_family=="Debian"
 
   - name: I want to start apache2 webserver(sudo service apache2)
     service:
-        name: apache2
+        name: mywebpackageonubuntu
         state: started
     when: ansible_os_family=="Debian"
 
   - name: I want to install webserver on amazon nodes
     dnf:
-        name: httpd
+        name: mywebpackageonredhat
         state: present
     when: ansible_os_family=="RedHat"
 
   - name: I want to start webserver on amazon nodes
     service:
-        name: httpd
+        name: mywebpackageonredhat
         state: started
     when: ansible_os_family=="RedHat"
 
