--- a/installjava.yml
+++ b/installjava.yml
@@ -12,4 +12,4 @@
     dnf:
       name: "{{myjavapackonRedHat}}"
       state: present
-    when: amsible_os_family=="RedHat"
+    when: ansible_os_family=="RedHat"
