--- a/mytags.yml
+++ b/mytags.yml
@@ -6,15 +6,18 @@
      apt:
         name: git
         state: present
+     tags: mygit
 
    - name: install wget
      apt:
         name: wget
         state: present
+     tags: mywget
 
    - name: install tree
      apt:
         name: tree
-        state: present 
+        state: present
+     tags: mytree 
 
   
