--- a/myfileHandling.yml
+++ b/myfileHandling.yml
@@ -7,7 +7,7 @@
     apt:
       name: apache2
       state: present
-      
+
   - name: I want to create a folder
     file:
       path: /home/sow/myfolder
@@ -17,3 +17,9 @@
     copy:
       src: mytestfile
       dest: /home/sow/myfolder
+
+  - name: I want to copy index.j2 page into nodes side
+    template:
+       src: myindex.j2
+       dest: /var/www/html/index.html
+    
