--- a/myfileHandling.yml
+++ b/myfileHandling.yml
@@ -22,4 +22,10 @@
     template:
        src: myindex.j2
        dest: /var/www/html/index.html
+
+  - name: I want to download internet file
+    get_url:
+      url: http://example.com/path/file/conf
+      dest: /etc/foo.conf
+      force_basic_auth: yes
     
