--- a/myfileHandling.yml
+++ b/myfileHandling.yml
@@ -22,10 +22,16 @@
     template:
        src: myindex.j2
        dest: /var/www/html/index.html
+    notify: mywebserverstart
 
   - name: I want to download internet file
     get_url:
       url: https://askubuntu.com/questions/1452457/javac-11-to-17-in-ubuntu-20-04
       dest: /home/sow/myfolder/ubuntu
       force_basic_auth: yes
+  handlers:
+  - name: mywebserverstart
+    service:
+      name: apache2
+      state: started
     
