--- a/mywebplaybook.yml
+++ b/mywebplaybook.yml
@@ -2,4 +2,5 @@
 - hosts: mywebservers
   become: true
   roles:
-  - {role: mywebrole, when: ansible_os_family=="Debian"}
+  - mywebrole
+ # - {role: mywebrole, when: ansible_os_family=="Debian"}
