--- a/mytomcatrole/tasks/downloadTomcat.yml
+++ b/mytomcatrole/tasks/downloadTomcat.yml
@@ -12,5 +12,5 @@
 
 - name: I want to extract Tar file
   command:
-    cmd: sudo tar xzvf apache-tomcat-10*tar.gz -C /opt/tomcat --strip-components=1
+    cmd: sudo tar xzvf /home/sow/apache-tomcat-10.1.40.tar.gz -C /opt/tomcat --strip-components=1
     creates: /opt/tomcat/LICENSE
